@@ -1,11 +1,7 @@
 package de.unimarburg.samplemanagement.utils;
 
-import com.vaadin.flow.data.provider.DataKeyMapper;
 import com.vaadin.flow.data.renderer.LocalDateRenderer;
-import com.vaadin.flow.data.renderer.LocalDateTimeRenderer;
 import com.vaadin.flow.data.renderer.Renderer;
-import com.vaadin.flow.data.renderer.Rendering;
-import com.vaadin.flow.dom.Element;
 import com.vladsch.flexmark.html.HtmlRenderer;
 import com.vladsch.flexmark.parser.Parser;
 import com.vladsch.flexmark.util.ast.Node;
@@ -14,19 +10,40 @@ import de.unimarburg.samplemanagement.model.Analysis;
 import de.unimarburg.samplemanagement.model.Sample;
 import de.unimarburg.samplemanagement.repository.AddressStoreRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
+import java.util.Collection;
 import java.util.Date;
 
 @Component
 public class GENERAL_UTIL {
     @Autowired
-    private static AddressStoreRepository addressStoreRepository;
+    private AddressStoreRepository addressStoreRepository; // Keep autowired, but not static
 
+    @Value("${app.legal.files.path:./legal_docs}")
+    private String legalFilesBasePath;
+
+    // Constructor for Spring to inject dependencies if needed.
+    public GENERAL_UTIL() {
+    }
+
+    // Existing static methods remain static
     public static String getAnalysisForSample(Sample sample, Long analysisTypeID) {
         try {
             return sample.getListOfAnalysis().stream()
@@ -43,10 +60,7 @@ public class GENERAL_UTIL {
         if (localDate == null) {
             return null;
         }
-        // Convert LocalDate to an Instant
         Instant instant = localDate.atStartOfDay(ZoneId.systemDefault()).toInstant();
-
-        // Create a Date from the Instant
         return Date.from(instant);
     }
 
@@ -58,20 +72,45 @@ public class GENERAL_UTIL {
     }
 
     public static Renderer<Sample> renderDate() {
-        return new LocalDateRenderer<>(sample -> convertToLocalDate(sample.getSampleDate()), "dd.MM.yyyy");
+        return new LocalDateRenderer<>(sample -> convertToLocalDate(sample.getDateOfShipment()), "dd.MM.yyyy");
     }
 
+    public static Renderer<Sample> renderDateYYYYMMDD() {
+        return new LocalDateRenderer<>(sample -> convertToLocalDate(sample.getDateOfShipment()), "yyyy/MM/dd");
+    }
 
-    public static String readFileToString(String resourcename) {
-        //get resource
-        URL mdUrl = GENERAL_UTIL.class.getClassLoader().getResource(resourcename);
-        if (mdUrl == null) {
-            return "couldn't load "+resourcename;
+    // New non-static method for reading legal files
+    public String readLegalFileToString(String resourceName) {
+        Path externalPath = Paths.get(legalFilesBasePath, resourceName);
+        if (Files.exists(externalPath)) {
+            try {
+                return Files.readString(externalPath, StandardCharsets.UTF_8);
+            } catch (IOException e) {
+                System.err.println("Error reading from external path " + externalPath + ": " + e.getMessage());
+                // Fallback to classpath if external read fails
+            }
         }
-        try {
-            return new String(mdUrl.openStream().readAllBytes());
-        } catch (Exception e) {
-            return "couldn't load "+resourcename;
+
+        // Fallback to classpath (using a helper static method for classpath read)
+        return readFileFromClasspath(resourceName);
+    }
+
+    // New non-static method for writing legal files
+    public void writeLegalFileToString(String resourceName, String content) throws IOException {
+        Path externalPath = Paths.get(legalFilesBasePath, resourceName);
+        Files.createDirectories(externalPath.getParent()); // Ensure parent directories exist
+        Files.writeString(externalPath, content, StandardCharsets.UTF_8);
+    }
+
+    // Helper static method for reading from classpath (extracted from original readFileToString)
+    private static String readFileFromClasspath(String resourceName) {
+        try (InputStream is = GENERAL_UTIL.class.getClassLoader().getResourceAsStream(resourceName)) {
+            if (is == null) {
+                return "Couldn't load " + resourceName + " from classpath.";
+            }
+            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            return "Couldn't load " + resourceName + " from classpath: " + e.getMessage();
         }
     }
 
@@ -94,4 +133,43 @@ public class GENERAL_UTIL {
         return sb.toString();
     }
 
+    public static boolean hasRole(String role) {
+        Collection<? extends GrantedAuthority> authorities = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getAuthorities();
+        String fullRoleName = role.startsWith("ROLE_") ? role : "ROLE_" + role;
+        System.out.println("Checking for role: " + fullRoleName + ". Found authorities: " + authorities);
+        return authorities.contains(new SimpleGrantedAuthority(fullRoleName));
+    }
+
+    public static String toOrdinal(int number) {
+        if (number <= 0) {
+            return String.valueOf(number);
+        }
+        String[] words = { "first", "second", "third", "fourth", "fifth", "sixth", "seventh", "eighth", "ninth", "tenth" };
+        if (number <= words.length) {
+            return words[number - 1];
+        }
+        String[] suffixes = new String[] { "th", "st", "nd", "rd", "th", "th", "th", "th", "th", "th" };
+        switch (number % 100) {
+            case 11:
+            case 12:
+            case 13:
+                return number + "th";
+            default:
+                return number + suffixes[number % 10];
+        }
+    }
+
+    public static String formatSampleAmount(String amount) {
+        if (amount != null && !amount.isEmpty()) {
+            try {
+                return String.valueOf((int) Float.parseFloat(amount));
+            } catch (NumberFormatException e) {
+                return amount;
+            }
+        }
+        return amount;
+    }
 }
+
